syntax = "proto3";

package services.stats;

import "resources/stats/stats.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/services/stats;stats";

message GetStatsRequest {}

message GetStatsResponse {
  map<string, resources.stats.Stat> stats = 1;
}

service StatsService {
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
}
